# sonic-mojo

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  bench.mojo  build.sh  changelog.md  main.mojo  mojoproject.toml  pixi.toml  test_sonic.mojo
bench_data/data/: readme.md
examples/try-sonic/: Taskfile.yml  mojoproject.toml
examples/try-sonic/src/: main.mojo
generator/: Cargo.toml
generator/src/: main.rs
recipes/: mojo-recipe-nightly.yaml  mojo-recipe.yaml  rs-recipe.yaml
scripts/: publish-forge.sh  publish-nightly.sh  publish.sh
sonic/: __init__.mojo  array.mojo  array_mut.mojo  array_ref.mojo  jsonarray.mojo  jsonarraymut.mojo  jsonobject.mojo  jsonobjectmut.mojo  jsonvalue.mojo  jsonvalue_arrayview.mojo  jsonvalue_objectview.mojo  jsonvalueref.mojo  object.mojo  object_mut.mojo  object_ref.mojo  value.mojo  value_array_view.mojo  value_mut.mojo  value_object_view.mojo  value_ref.mojo  value_ref_array_view.mojo  value_ref_object_view.mojo
sonic/internal/: __init__.mojo  diplomat_runtime.mojo  jarray.mojo  jarraymut.mojo  jarrayref.mojo  jkeysiter.mojo  jkeyvaluemut.mojo  jkeyvaluemut_d.mojo  jkeyvalueref.mojo  jobject.mojo  jobjectiter.mojo  jobjectitermut.mojo  jobjectmut.mojo  jobjectref.mojo  jsontype.mojo  jsontype_d.mojo  jvalue.mojo  jvalueiter.mojo  jvalueitermut.mojo  jvaluemut.mojo  jvaluemut_d.mojo  jvalueref.mojo
sonic_rs_bindings/: Cargo.toml
sonic_rs_bindings/src/: lib.rs
src/: bench.mojo  csonic_demo.mojo  main.mojo  test_sonic.mojo
src/sonic/: __init__.mojo  array.mojo  array_mut.mojo  array_ref.mojo  object.mojo  object_mut.mojo  object_ref.mojo  value.mojo  value_array_view.mojo  value_mut.mojo  value_object_view.mojo  value_ref.mojo  value_ref_array_view.mojo  value_ref_object_view.mojo
src/sonic/internal/: __init__.mojo  csonic.mojo  csonic_bind.mojo  diplomat_runtime.mojo  jarray.mojo  jarray_d.mojo  jarraymut.mojo  jarraymut_d.mojo  jarrayref.mojo  jarrayref_d.mojo  jkeysiter.mojo  jkeysiter_d.mojo  jkeyvaluemut.mojo  jkeyvaluemut_d.mojo  jkeyvalueref.mojo  jkeyvalueref_d.mojo  jobject.mojo  jobject_d.mojo  jobjectiter.mojo  jobjectiter_d.mojo  jobjectitermut.mojo  jobjectitermut_d.mojo  jobjectmut.mojo  jobjectmut_d.mojo  jobjectref.mojo  jobjectref_d.mojo  jsontype.mojo  jsontype_d.mojo  jvalue.mojo  jvalue_d.mojo  jvalueiter.mojo  jvalueiter_d.mojo  jvalueitermut.mojo  jvalueitermut_d.mojo  jvaluemut.mojo  jvaluemut_d.mojo  jvalueref.mojo  jvalueref_d.mojo
