[package]
name = "sonic"
version = "0.2.0"
edition = "2021"

#
# TODO X: pixi + rattler-build 不支持 cargo workspace 模式, 必须保留此字段!!!!
#
[workspace]


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
#diplomat = "0.8.0"
#diplomat-runtime = "0.8.2"
#diplomat = { path="../../../f0cii/diplomat/macro" }
diplomat = { git = "https://github.com/f0cii/diplomat.git", rev = "541ae700e823006ce1645b742937af95ac5e0ac7" }
#diplomat-runtime = { path="../../../f0cii/diplomat/runtime" }
diplomat-runtime = { git = "https://github.com/f0cii/diplomat.git", rev = "541ae700e823006ce1645b742937af95ac5e0ac7" }
lazy_static = "1.5.0"
sonic-rs = "0.3.14"
